  jEdit.getActions()
  jEdit.openFile(View view,
                 String parent,
                 String path,
                 boolean readOnly,
                 boolean newFile)
  jEdit.openFile(View view,
                 String parent,
                 String path,
                 boolean readOnly,
                 boolean newFile,
                 Hashtable props)
  jEdit.createTextArea()
  VFS.DirectoryEntry
  VFS.VFS(String name)
  VFS.showBrowseDialog(Object[] session, Component comp)
  VFS._listDirectory(Object session, String directory, Component comp)
  VFS._getDirectoryEntry(Object session, String path, Component comp)
  VFSManager.getVFSByName(String name)
  VFSManager.registerVFS(String protocol, VFS vfs)
  VFSManager.error(final Component comp,
                   final String error,
                   final Object[] args)
  VFSManager.getFilesystems()
  VFSFile.name
  VFSFile.path
  VFSFile.symlinkPath
  VFSFile.deletePath
  VFSFile.type
  VFSFile.length
  VFSFile.hidden
  VFSFile.canRead
  VFSFile.canWrite
  ReadWriteLock
  (Matthieu Casanova)

- Applied patch #2809978 to remove use of deprecated methods in jEdit's
  textarea (#2809978 from Kevin Hunter, Matthieu Casanova)
}}}
{{{ Editing
- Added new keywords to C# edit mode (patch #3120746 from nherzing,
  Matthieu Casanova)

- Consider full path when using file name glob in edit mode decisions.
  (#2557712 - Alan Ezust)

- New edit mode option: Elastic Tabstops. (Anshal Shukla + Shlomy Reinstein)

- Applied patch from Matthew Gilbert to add ability to increase/decrease line
  spacing in the text area. (#3023134, Dale Anson)

- Added jflex edit mode (Matthieu Casanova)

- Haxe mode update (Dion Amago # 3123602)

- Updated erlang mode and associated *.hrl to erlang language
  (patch #3042398 from jclopes, Matthieu Casanova)

- Added coffee edit mode (patch #3173375 from Dennis Hotson, Matthieu Casanova)

}}}
{{{ UI

- Updated ColorWellButton to use the dialog provided by JColorChooser rather